# natwest_desc_hackaton

./: .gitignore  generate_description.py  generate_questions.py  parse_pdf.py  pyproject.toml
hrgen/: manage.py
hrgen/hrgen/: asgi.py  models.py  openai_utils.py  settings.py  urls.py  views.py  wsgi.py
hrgen/hrgen/templatetags/: string_extras.py
hrgen/templates/: base.html  create_description.html  create_summary.html  index.html  interview.html  position.html  positions.html  questions.html
